	setup dialog

	* src/desktop.*: Keep page rectangle in SPDesktop

	* src/sp-root.c: Update page rectangle

	* src/file.c (sp_file_print_to_printer): gnome_print_bgeinpage ()
	Remove FRGBA creation

	* src/dialogs/export.c (sp_export_do_export): gnome_print_beginpage ()

	* glade/sodipodi.glade: Add document & xml tree to properties menu

	* src/interface.c (sp_create_window): Remove ugly buttons
	
2000-10-05  Lauris Kaplinski  <lauris@helixcode.com>

	* src/helper/canvas-grid.*: Grid item for canvas

	* src/sp-namedview.c: Use & update grid

	* src/desktop-snap.c: Snap to grid

2000-10-04  Frank Felfe <innerspace@iname.com>

	* glade/transformation.glade: Improved dialog

	* glade/*.xpm: New icons

	* src/dialogs/transformation.*: Improved dialog

	* src/selection-chemistry.*: new transformation functions

	* src/sp-metrics.*: New files

2000-10-04  Lauris Kaplinski  <lauris@helixcode.com>

	* src/nodepath.c: #define reasonable knot colors
	(sp_nodepath_selected_nodes_move): Implement snapping
	(node_ctrl_request): Implement snapping

2000-10-03  Lauris Kaplinski  <lauris@helixcode.com>

	* src/nodepath.c (update_repr): Call sp_document_done ()

	* src/dialogs/desktop-properties.*: Use new dialog layout

	* glade/desktop.glade: Use new dialog layout

	* src/sp-guide.*: "color" and "hicolor" attributes

	* src/sp-namedview.*: Bunch of new attributes

	* src/desktop-events.c (sp_dt_guide_event): Use guide colors
	(sp_dt_ruler_event): Use guide colors

2000-10-02  Lauris Kaplinski  <lauris@helixcode.com>

	* src/knot.c (sp_knot_set_flag): Implement different outlines
	(sp_knot_update_ctrl): New function to set SPCtrl colors

	* src/nodepath.*: Mostly rewritten

	* src/node-context.*: Use new SPNodePath

2000-09-30  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* configure.in ALL_LINGUAS: Add Japanese 'ja'

2000-09-21  Pablo Saratxaga <pablo@mandrakesoft.com>
	
	* configure.in: ALL_LINGUAS: added 'ca' for Catalan translation.
