@@ -1,13 +1,0 @@
-#ifndef OBJECT_FILL_H
-#define OBJECT_FILL_H
-
-/*
- * object-fill
- *
- * Fill properties dialog & relatives
- *
- */
-
-void sp_object_fill_dialog (void);
-
-#endif
