@@ -1,13 +1,0 @@
-#ifndef OBJECT_STROKE_H
-#define OBJECT_STROKE_H
-
-/*
- * object-stroke
- *
- * Stroke properties dialog & relatives
- *
- */
-
-void sp_object_stroke_dialog (void);
-
-#endif
